modules/Story/Story.module.scss
$story-container-max-width: 720px;

.container {
    margin: 0 auto;
    background: var(--prezly-background-color);

    @include desktop-up {
        max-width: $story-container-max-width;
    }
}

.date {
    @include text-label;

    color: var(--prezly-text-color-secondary);
    margin: 0;
}

.linksAndDateWrapper {
    display: flex;
    flex-direction: column;

    &.left {
        align-items: flex-start;
    }

    &.right {
        align-items: flex-end;
    }

    &.center {
        align-items: center;
    }
}

.headerShare {
    margin: $spacing-3 0 $spacing-6;
}

